tests/errors/parser/invalid-width3.futil
component main() -> () {
  cells { }
  wires {
    r.in = 1'o10;
  }
  control { }
}
